fix(VtkView): Do not wrap annotations

--- a/src/assets/styles/vtk-view.css
+++ b/src/assets/styles/vtk-view.css
@@ -53,4 +53,6 @@
   /* increase kerning to compensate for border */
   letter-spacing: 1px;
   font-size: 14px;
+  /* no wrapping */
+  white-space: nowrap;
 }
